# PTMK_testovoe

./: .gitignore  CMakeLists.txt  README.md  myApp.cpp
SQLiteCpp-master/include/SQLiteCpp/: SQLiteCpp.h  VariadicBind.h
